--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
                 <input type="text" name="nome" id="nome" placeholder="Nome do lembrete">
                 <input type="text" id="data" placeholder="Data do lembrete (no formato dd/mm/yyyy)">
             </div>
-            <button class="botao-criar-lembrete" type="submit">Criar</button>
+            <button onclick="criaLembrete(event)" class="botao-criar-lembrete" type="submit">Criar</button>
     </div>
 </body>
 </html>
