feat: create lista de lembretes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,5 +18,16 @@
             </div>
             <button onclick="criaLembrete(event)" class="botao-criar-lembrete" type="submit">Criar</button>
     </div>
+    <div class="lista-de-lembretes">
+        <h1>Lista de lembretes</h1>
+        <div class="lista">
+            <ol>
+                02/03/2023
+                <li>exemplo 1</li>
+                <li>exemplo 2</li>
+                <li>exemplo 3</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
