refactor: styles css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,8 +21,8 @@
     <div class="lista-de-lembretes">
         <h1>Lista de lembretes</h1>
         <div class="lista">
-            <ol>
-                02/03/2023
+            <ol class="lembretes-por-data"> 
+                <span class="data">05/03/2023</span>
                 <li>exemplo 1</li>
                 <li>exemplo 2</li>
                 <li>exemplo 3</li>
