--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de lembretes</title>
     <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/lembrete.css">
+    <link rel="stylesheet" href="css/cria-lembrete.css">
+    <link rel="stylesheet" href="css/lista-lembretes.css">
 </head>
 <body>
     <div class="card-cria-lembrete">
