--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,15 +22,9 @@
     </div>
     <div class="lista-de-lembretes">
         <h1>Lista de lembretes</h1>
-        <div class="lista">
-            <ol class="lembretes-por-data"> 
-                <span class="data">05/03/2023</span>
-                <li>exemplo 1</li>
-                <li>exemplo 2</li>
-                <li>exemplo 3</li>
-            </ol>
-        </div>
+        <ol id="lembretesList"></ol>
     </div>
 </body>
 <script src="js/routers.js"></script>
+<script src="js/main.js"></script>
 </html>
