create data validation on frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,7 @@
 
     </div>
 </body>
+<script src="js/validation.js"></script>
 <script src="js/routers.js"></script>
 <script src="js/main.js"></script>
 </html>
