reorganize folders structure

--- a/frontend/src/public/index.html
+++ b/frontend/src/public/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de lembretes</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔔</text></svg>">
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/cria-lembrete.css">
-    <link rel="stylesheet" href="css/lista-lembretes.css">
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/cria-lembrete.css">
+    <link rel="stylesheet" href="../styles/lista-lembretes.css">
 </head>
 <body>
     <div class="card-cria-lembrete">
@@ -27,7 +27,7 @@
 
     </div>
 </body>
-<script src="js/validation.js"></script>
-<script src="js/routers.js"></script>
-<script src="js/main.js"></script>
+<script src="../api/validation.js"></script>
+<script src="../api/routers.js"></script>
+<script src="../api/main.js"></script>
 </html>
